Added Admin dashBoard APIs and role-based access Control