@@ -3,12 +3,14 @@ package com.fraudSystem.Security;
 import com.fraudSystem.Entity.User;
 import com.fraudSystem.Repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 public class CustomUserDetailService implements UserDetailsService {
@@ -21,6 +23,6 @@ public class CustomUserDetailService implements UserDetailsService {
 
         User user = this.userRepository.findByEmail(username).orElseThrow(() -> new UsernameNotFoundException("User not Found"));
 
-        return new org.springframework.security.core.userdetails.User(user.getEmail(),user.getPassword(), Collections.emptyList());
+        return new org.springframework.security.core.userdetails.User(user.getEmail(),user.getPassword(), List.of(new SimpleGrantedAuthority(user.getRole())));
     }
 }
